Bug 1200073 - Use extra space before the computed view checkbox so it's not touching the sibling text input. r=pbrosset
UltraBlame original commit: c87fabaa02a534fd53559a77ff423d6007e56a07

--- a/devtools/client/themes/computedview.css
+++ b/devtools/client/themes/computedview.css
@@ -20,6 +20,12 @@ body {
   height: 100%;
 }
 
+#browser-style-checkbox {
+  
+
+  -moz-margin-start: 5px;
+}
+
 #propertyContainer {
   -moz-user-select: text;
   overflow: auto;
